--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,10 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: eugeniogdiniz
+          github_user_name: ellen2121
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set permissions for dist directory
-        run: chmod -R +w dist
-
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
